==> xinliu0260/Autopilot/extdriver/imu/icm20948.c <==
#include "autopilot.h"
#include "rtdevice.h"
#include "extdevice.h"
#include "module/math/conversion.h"
#include "rtthread.h"
#define LOG_TAG "icm20948"
#define LOG_LVL DBG_INFO
#include "ulog.h"
#define ICM20948_ID                0xEA
#define REG_BANK_SEL               0x7F
#define B0_WHO_AM_I                0x00
#define B0_USER_CTRL               0x03
#define B0_LP_CONFIG               0x05
#define B0_PWR_MGMT_1              0x06
#define B0_PWR_MGMT_2              0x07
#define B0_INT_PIN_CFG             0x0F
#define B0_INT_ENABLE              0x10
#define B0_INT_ENABLE_1            0x11
#define B0_INT_ENABLE_2            0x12
#define B0_INT_ENABLE_3            0x13
#define B0_I2C_MST_STATUS          0x17
#define B0_INT_STATUS              0x19
#define B0_INT_STATUS_1            0x1A
#define B0_INT_STATUS_2            0x1B
#define B0_INT_STATUS_3            0x1C
#define B0_DELAY_TIMEH             0x28
#define B0_DELAY_TIMEL             0x29
#define B0_ACCEL_XOUT_H            0x2D
#define B0_ACCEL_XOUT_L            0x2E
#define B0_ACCEL_YOUT_H            0x2F
#define B0_ACCEL_YOUT_L            0x30
#define B0_ACCEL_ZOUT_H            0x31
#define B0_ACCEL_ZOUT_L            0x32
#define B0_GYRO_XOUT_H             0x33
#define B0_GYRO_XOUT_L             0x34
#define B0_GYRO_YOUT_H             0x35
#define B0_GYRO_YOUT_L             0x36
#define B0_GYRO_ZOUT_H             0x37
#define B0_GYRO_ZOUT_L             0x38
#define B0_TEMP_OUT_H              0x39

static void select_user_bank(userbank ub)
{
    if (ub == current_bank)
        return;

    current_bank = ub;

    spi_write_reg8(spi_dev, REG_BANK_SEL, ub);
}

static void icm20948_device_reset()
{
    write_single_icm20948_reg(ub_0, B0_PWR_MGMT_1, 0x80 | 0x41);
    rt_thread_mdelay(100);
}

static void ak09916_soft_reset()
{
    write_single_ak09916_reg(MAG_CNTL3, 0x01);
    rt_thread_mdelay(100);
}

static void icm20948_wakeup()
{
    uint8_t new_val = read_single_icm20948_reg(ub_0, B0_PWR_MGMT_1);
    new_val &= 0xBF;

    write_single_icm20948_reg(ub_0, B0_PWR_MGMT_1, new_val);
    rt_thread_mdelay(100);
}

static void icm20948_sleep()
{
    uint8_t new_val = read_single_icm20948_reg(ub_0, B0_PWR_MGMT_1);
    new_val |= 0x40;

    write_single_icm20948_reg(ub_0, B0_PWR_MGMT_1, new_val);
    rt_thread_mdelay(100);
}

static void icm20948_i2c_master_enable()
{
    uint8_t new_val = read_single_icm20948_reg(ub_0, B0_USER_CTRL);
    new_val |= 0x20;

    write_single_icm20948_reg(ub_0, B0_USER_CTRL, new_val);
    rt_thread_mdelay(100);
}

static void ak09916_operation_mode_setting(operation_mode mode)
{
    write_single_ak09916_reg(MAG_CNTL2, mode);
    rt_thread_mdelay(100);
}
