==> EnCl4/Alaris/Software/New/DAPU/Core/Src/icm20948.c <==
#include "icm20948.h"
#include "dapu_config.h"
#include "dapu_spi.h"
#include <string.h>
#include "i2c.h"
#define ICM_BUS_LOCK()		((void)0)
#define ICM_BUS_UNLOCK()	((void)0)
#define ICM_BUS_LOCK()		dapu_spi_lock()
#define ICM_BUS_UNLOCK()	dapu_spi_unlock()
#define ICM20948_WHO_AM_I_RETRIES   10u

void icm20948_device_reset()
{
	write_single_icm20948_reg(ub_0, B0_PWR_MGMT_1, 0x80 | 0x41);
	HAL_Delay(100);
	s_bank_cache = 0xFFu;	/* the reset puts the device back in bank 0 */
}

void ak09916_soft_reset()
{
	write_single_ak09916_reg(MAG_CNTL3, 0x01);
	HAL_Delay(100);
}

void icm20948_wakeup()
{
	uint8_t new_val = read_single_icm20948_reg(ub_0, B0_PWR_MGMT_1);
	new_val &= 0xBF;

	write_single_icm20948_reg(ub_0, B0_PWR_MGMT_1, new_val);
	HAL_Delay(100);
}

void icm20948_sleep()
{
	uint8_t new_val = read_single_icm20948_reg(ub_0, B0_PWR_MGMT_1);
	new_val |= 0x40;

	write_single_icm20948_reg(ub_0, B0_PWR_MGMT_1, new_val);
	HAL_Delay(100);
}

void icm20948_i2c_master_enable()
{
	uint8_t new_val = read_single_icm20948_reg(ub_0, B0_USER_CTRL);
	new_val |= 0x20;

	write_single_icm20948_reg(ub_0, B0_USER_CTRL, new_val);
	HAL_Delay(100);
}

void ak09916_operation_mode_setting(operation_mode mode)
{
	write_single_ak09916_reg(MAG_CNTL2, mode);
	HAL_Delay(100);
}

static void select_user_bank(userbank ub)
{
	uint8_t value = (uint8_t)ub;

	if (value == s_bank_cache)
	{
		return;
	}
	if (bus_write(REG_BANK_SEL, &value, 1))
	{
		s_bank_cache = value;
	}
	else
	{
		s_bank_cache = 0xFFu;
	}
}
